--- a/app/src/main/res/drawable/rounded_corners_with_shadow.xml
+++ b/app/src/main/res/drawable/rounded_corners_with_shadow.xml
@@ -3,5 +3,6 @@
     <solid android:color="#FFFFFF"/> <!-- Background color -->
     <corners android:radius="15dp"/> <!-- Rounded corners -->
     <padding android:left="4dp" android:right="4dp" android:top="4dp" android:bottom="4dp"/> <!-- Padding inside -->
-    <elevation android:elevation="4dp"/> <!-- Shadow effect (API 21+) -->
+    <elevation android:elevation="4dp"/>
+    <stroke android:color="@color/verdoso" android:width="1dp" />
 </shape>
