--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,137 +9,248 @@
     android:background="@color/white"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/logo_text"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/logo"
+        android:fontFamily="@font/montserrat_regular"
+        android:textSize="50sp"
+        android:textColor="@color/verdoso"
+        android:text="SAM"
+        android:layout_marginEnd="50dp"
+        android:layout_marginTop="80dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/username_input" />
+
+
+    <TextView
+        android:id="@+id/logo_text2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/logo"
+        android:fontFamily="@font/montserrat_regular"
+        android:textSize="50sp"
+        android:textColor="@color/black"
+        android:text="ID"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/logo_text"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/logo"
+        android:fontFamily="@font/montserrat_regular"
+        android:textSize="12sp"
+        android:textColor="@color/black"
+        android:text="Inicia sesion en tu cuenta"
+        android:layout_marginTop="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/username_input" />
+
+    <EditText
+        android:id="@+id/username_input"
+        android:layout_width="350dp"
+        android:layout_height="48dp"
+        android:hint="@string/email"
+        android:importantForAutofill="no"
+        android:textColorHint="@color/Gray"
+        android:textSize="20sp"
+        android:padding="6dp"
+        android:layout_marginTop="50dp"
+        android:elevation="5dp"
+        android:fontFamily="@font/montserrat"
+        android:background="@drawable/input_rectangles"
+        android:inputType="text"
+        app:layout_constraintTop_toBottomOf="@id/logo_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <EditText
+        android:id="@+id/password_input"
+        android:layout_width="350dp"
+        android:layout_height="48dp"
+        android:hint="@string/password"
+        android:importantForAutofill="no"
+        android:textColor="@color/Gray"
+        android:layout_marginTop="16dp"
+        android:textColorHint="@color/Gray"
+        android:textSize="20sp"
+        android:padding="6dp"
+        android:fontFamily="@font/montserrat"
+        android:background="@drawable/input_rectangles"
+        android:elevation="5dp"
+        android:inputType="textPassword"
+        app:layout_constraintTop_toBottomOf="@id/username_input"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/login_btn"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:text="Iniciar sesion"
+        android:textColor="@color/Secondary_Light"
+        android:layout_marginTop="80dp"
+        android:textSize="18sp"
+        android:background="@drawable/rounded_button"
+        android:fontFamily="@font/montserrat_bold"
+        app:layout_constraintTop_toBottomOf="@id/password_input"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/forgot_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Olvidaste tu contraseña?"
+        android:textColor="@color/black"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/montserrat_regular"
+        android:textSize="16sp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintTop_toBottomOf="@id/password_input"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- RelativeLayout replacement -->
+    <TextView
+        android:id="@+id/left_line"
+        android:layout_width="128dp"
+        android:layout_height="2dp"
+        android:background="@drawable/line"
+        android:layout_marginTop="130dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/sign_up_with"
+        app:layout_constraintTop_toBottomOf="@id/forgot_password"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@id/sign_up_with"
+        app:layout_constraintHorizontal_bias="0.5"/>
+
+    <TextView
+        android:id="@+id/right_line"
+        android:layout_width="128dp"
+        android:layout_height="2dp"
+        android:background="@drawable/line"
+        android:layout_marginTop="130dp"
+        app:layout_constraintStart_toEndOf="@id/sign_up_with"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/forgot_password"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toBottomOf="@id/sign_up_with"
+        app:layout_constraintHorizontal_bias="0.5"/>
+
+    <TextView
+        android:id="@+id/sign_up_with"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="130dp"
+        android:text="@string/sign_up_with"
+        android:fontFamily="@font/montserrat_regular"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/forgot_password"
+        app:layout_constraintStart_toEndOf="@id/left_line"
+        app:layout_constraintEnd_toStartOf="@id/right_line"
+        app:layout_constraintHorizontal_bias="0.5"/>
+
+    <!-- Facebook button -->
+    <LinearLayout
+        android:id="@+id/facebook_btn"
+        android:layout_marginTop="20dp"
+        android:layout_width="180dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="8dp"
+        android:orientation="horizontal"
         android:gravity="center"
-        android:orientation="vertical"
-        tools:ignore="UselessParent">
+        android:background="@drawable/rounded_corners_with_shadow"
+        app:layout_constraintTop_toBottomOf="@id/sign_up_with"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/google_btn"
+        app:layout_constraintHorizontal_weight="1">
 
         <ImageView
-            android:layout_width="300dp"
-            android:layout_height="250dp"
-            android:contentDescription="@string/icon"
-            android:src="@drawable/logo_app" />
-
-        <EditText
-            android:layout_width="350dp"
-            android:layout_height="48dp"
-            android:hint="@string/email"
-            android:importantForAutofill="no"
-            android:textColorHint="@color/Gray"
-            android:textSize="20sp"
-            android:padding="6dp"
-            android:elevation="5dp"
-            android:fontFamily="@font/montserrat"
-            android:background="@drawable/input_rectangles"
-            android:inputType="text"
-            android:id="@+id/username_input" />
-
-        <EditText
-            android:layout_width="350dp"
-            android:layout_height="48dp"
-            android:hint="@string/password"
-            android:importantForAutofill="no"
-            android:textColor="@color/Gray"
-            android:layout_marginTop="16dp"
-            android:textColorHint="@color/Gray"
-            android:textSize="20sp"
-            android:padding="6dp"
-            android:fontFamily="@font/montserrat"
-            android:background="@drawable/input_rectangles"
-            android:elevation="5dp"
-            android:inputType="textPassword"
-            android:id="@+id/password_input" />
-
-        <Button
-            android:layout_width="200dp"
-            android:layout_height="60dp"
-            android:text="@string/login"
-            android:textColor="@color/Secondary_Light"
-            android:layout_marginTop="20dp"
-            android:textSize="18sp"
-            android:background="@drawable/rounded_button"
-            android:fontFamily="@font/montserrat_bold"
-            android:id="@+id/login_btn"/>
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/facebook_logo"
+            android:contentDescription="@string/facebook_logo" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/forgot_password"
+            android:text="facebook"
             android:textColor="@color/black"
-            android:layout_marginTop="16dp"
+            android:textSize="16sp"
             android:fontFamily="@font/montserrat"
-            android:textSize="16sp"/>
-
-        <!-- Aquí está el RelativeLayout con las líneas a los lados y el texto centrado -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp">
-
-            <TextView
-                android:contentDescription="left line"
-                android:layout_width="128dp"
-                android:layout_height="2dp"
-                android:background="@drawable/line"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="16dp" />
-
-            <TextView
-                android:contentDescription="right line"
-                android:layout_width="128dp"
-                android:layout_height="2dp"
-                android:background="@drawable/line"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="16dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/sign_up_with"
-                android:layout_centerInParent="true"
-                android:fontFamily="@font/montserrat"
-                android:textColor="@color/black"
-                android:textSize="16sp"/>
-        </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:layout_marginTop="16dp">
-
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:contentDescription="@string/facebook_logo"
-                android:src="@drawable/facebook_logo"
-                android:id="@+id/facebook_btn"
-                android:padding="4dp"
-                android:layout_margin="16dp"
-                />
-
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_margin="16dp"
-                android:contentDescription="@string/google_logo"
-                android:src="@drawable/google_logo"
-                android:padding="4dp"
-                android:id="@+id/google_btn"/>
-        </LinearLayout>
-
-        <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginBottom="32dp"
-            android:contentDescription="@string/email_logo"
-            android:src="@drawable/email_logo"
-            android:id="@+id/email_btn"/>
+            android:layout_marginStart="8dp" />
     </LinearLayout>
 
-</RelativeLayout>
+    <!-- Google button -->
+    <LinearLayout
+        android:layout_marginTop="20dp"
+        android:id="@+id/google_btn"
+        android:layout_width="180dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="8dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:background="@drawable/rounded_corners_with_shadow"
+        app:layout_constraintTop_toBottomOf="@id/sign_up_with"
+        app:layout_constraintStart_toEndOf="@+id/facebook_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_weight="1">
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/google_logo"
+            android:contentDescription="@string/google_logo" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="google"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:fontFamily="@font/montserrat"
+            android:layout_marginStart="8dp" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/addaccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/logo"
+        android:fontFamily="@font/montserrat_regular"
+        android:textSize="13sp"
+        android:textColor="@color/black"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="70dp"
+        android:text="@string/no_tienes_una_cuenta"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+        android:id="@+id/addaccount2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/logo"
+        android:fontFamily="@font/montserrat_regular"
+        android:textSize="13sp"
+        android:textColor="@color/verdoso"
+        android:layout_marginBottom="20dp"
+        android:text="Registrate"
+        android:layout_marginEnd="70dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/addaccount"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
