--- a/app/src/main/res/layout/activity_history_falls.xml
+++ b/app/src/main/res/layout/activity_history_falls.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -20,100 +21,23 @@
         android:text="@string/ca_das"
         android:fontFamily="@font/montserrat_bold"
         android:textSize="20sp"
-        android:layout_marginTop="110dp"
+        android:layout_marginTop="90dp"
         android:textColor="@color/Secondary_Darker"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/graph"
-        android:layout_width="350dp"
-        android:layout_height="200dp"
-        android:background="@drawable/shadow"
-        app:cardBackgroundColor="@color/Primary_Light"
-        app:cardCornerRadius="20dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/title2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/ca_das"
-        android:fontFamily="@font/montserrat_bold"
-        android:textSize="20sp"
-        android:layout_marginTop="20dp"
-        android:textColor="@color/Secondary_Darker"
-        app:layout_constraintTop_toBottomOf="@id/graph"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Container for dynamically added fall cards -->
+    <!-- Placeholder for dynamically added cards -->
     <LinearLayout
         android:id="@+id/cardContainer"
-        android:layout_width="match_parent"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/title2"
+        app:layout_constraintTop_toBottomOf="@id/title"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <!-- Existing cards for demonstration -->
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card1"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:background="@drawable/shadow"
-        app:cardBackgroundColor="@color/Primary_Light"
-        app:cardCornerRadius="20dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/cardContainer"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-        android:id="@+id/name1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/manuel"
-        android:fontFamily="@font/montserrat_semi_bold"
-        android:textSize="20sp"
-        android:elevation="6dp"
-        android:layout_marginStart="20dp"
-        android:textColor="@color/black"
-        app:layout_constraintTop_toTopOf="@id/card1"
-        app:layout_constraintBottom_toBottomOf="@id/card1"
-        app:layout_constraintStart_toStartOf="@id/card1"/>
-
-    <TextView
-        android:id="@+id/time1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hace 19 horas"
-        android:fontFamily="@font/montserrat_regular"
-        android:textSize="18sp"
-        android:elevation="6dp"
-        android:layout_marginStart="20dp"
-        android:textColor="@color/black"
-        app:layout_constraintTop_toTopOf="@id/card1"
-        app:layout_constraintBottom_toBottomOf="@id/card1"
-        app:layout_constraintStart_toEndOf="@id/name1"
-        app:layout_constraintVertical_bias="0.5"/>
-
-    <ImageView
-        android:id="@+id/phone_ic1"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:contentDescription="@string/phone_ic"
-        android:src="@drawable/phone_ic"
-        android:elevation="6dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintBottom_toBottomOf="@id/card1"
-        app:layout_constraintEnd_toEndOf="@id/card1"
-        app:layout_constraintTop_toTopOf="@id/card1"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
