--- a/app/src/main/res/layout/card_fall.xml
+++ b/app/src/main/res/layout/card_fall.xml
@@ -2,35 +2,42 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+    android:layout_width="350dp"
+    android:layout_height="50dp"
+    android:layout_marginTop="20dp"
     app:cardBackgroundColor="@color/Primary_Light"
-    app:cardCornerRadius="10dp">
+    app:cardCornerRadius="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/name"
-            android:layout_width="wrap_content"
+            android:layout_width="151dp"
             android:layout_height="wrap_content"
-            android:text="Fall Detected"
             android:fontFamily="@font/montserrat_semi_bold"
-            android:textSize="18sp"
-            android:textColor="@color/black" />
+            android:text="Fall Detected"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:paddingTop="8dp"
+            android:paddingStart="10dp"/>
 
         <TextView
             android:id="@+id/time"
-            android:layout_width="wrap_content"
+            android:layout_width="147dp"
             android:layout_height="wrap_content"
-            android:text="Just Now"
             android:fontFamily="@font/montserrat_regular"
-            android:textSize="16sp"
-            android:textColor="@color/black" />
+            android:text="Just Now"
+            android:textColor="@color/black"
+            android:textSize="18sp" />
 
+        <ImageView
+            android:id="@+id/phone_ic"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:contentDescription="@string/phone_ic"
+            android:src="@drawable/phone_ic" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
