--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -12,13 +12,26 @@
         android:layout_height="wrap_content"
         android:padding="16dp">
 
+        <ImageView
+            android:id="@+id/flecha"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/arrow"
+            android:rotation="180"
+            android:layout_marginHorizontal="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription" />
+
         <TextView
             android:id="@+id/titleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Title"
+            android:text="@string/paciente_manuel"
             android:textSize="32sp"
-            android:textStyle="bold"
+            android:layout_marginTop="70dp"
+            android:fontFamily="@font/montserrat_bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -36,11 +49,12 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/indicatorsCardView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="4dp"
+            android:layout_width="350dp"
+            android:layout_height="200dp"
+            android:background="@drawable/shadow"
+            app:cardBackgroundColor="@color/Primary_Light"
+            app:cardCornerRadius="20dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/subtitleTextView">
@@ -49,91 +63,87 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:layout_marginTop="10dp"
                 android:padding="16dp">
 
-                <LinearLayout
-                    android:layout_width="0dp"
+                <FrameLayout
+                    android:layout_width="1dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical">
+                    android:gravity="center">
 
                     <ImageView
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
+                        android:id="@+id/pulse"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:contentDescription="@string/circulo"
+                        android:src="@drawable/circle_test"
+                        android:elevation="6dp"/>
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
                         android:src="@drawable/heart_rate_ic"
-                        app:tint="@android:color/holo_red_dark" />
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_margin="8dp"
-                        app:cardBackgroundColor="#FFEBEE"
-                        app:cardCornerRadius="50dp">
-
-                        <TextView
-                            android:id="@+id/bpmTextView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:text="72"
-                            android:textColor="@android:color/holo_red_dark"
-                            android:textSize="24sp"
-                            android:textStyle="bold" />
-
-                    </androidx.cardview.widget.CardView>
+                        app:tint="@android:color/holo_red_dark"
+                        android:layout_gravity="top|center_horizontal"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginEnd="5dp" />
 
                     <TextView
+                        android:id="@+id/bpmTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="BPM"
-                        android:textStyle="bold" />
+                        android:text="72"
+                        android:textColor="@android:color/black"
+                        android:textSize="42sp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginTop="15dp"
+                        android:fontFamily="@font/montserrat_regular"
+                        android:layout_gravity="center" />
 
-                </LinearLayout>
+                </FrameLayout>
 
-                <LinearLayout
-                    android:layout_width="0dp"
+                <FrameLayout
+                    android:layout_width="1dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical">
+                    android:gravity="center">
 
                     <ImageView
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
+                        android:id="@+id/oxigen"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:src="@drawable/circle_test"
+                        android:contentDescription="@string/circulo"
+                        android:elevation="6dp"/>
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
                         android:src="@drawable/oxigen_ic"
-                        app:tint="@android:color/holo_blue_dark" />
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_margin="8dp"
-                        app:cardBackgroundColor="#E3F2FD"
-                        app:cardCornerRadius="50dp">
-
-                        <TextView
-                            android:id="@+id/spo2TextView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:text="98%"
-                            android:textColor="@android:color/holo_blue_dark"
-                            android:textSize="24sp"
-                            android:textStyle="bold" />
-
-                    </androidx.cardview.widget.CardView>
+                        app:tint="@android:color/holo_blue_dark"
+                        android:layout_gravity="top|center_horizontal"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginEnd="5dp" />
 
                     <TextView
+                        android:id="@+id/spo2TextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="SPO2"
-                        android:textStyle="bold" />
+                        android:text="98%"
+                        android:textColor="@android:color/black"
+                        android:textSize="42sp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginTop="15dp"
+                        android:fontFamily="@font/montserrat_regular"
+                        android:layout_gravity="center"/>
 
-                </LinearLayout>
+                </FrameLayout>
 
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
+
 
         <androidx.cardview.widget.CardView
             android:id="@+id/chartsCardView"
