--- a/app/src/main/res/layout/check_now.xml
+++ b/app/src/main/res/layout/check_now.xml
@@ -11,7 +11,7 @@
 
     <include
         android:id="@+id/header"
-        layout="@layout/layout_header" />
+        layout="@layout/go_back_header"/>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card"
